// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter renders correctly with ariaLabeledBy 1`] = `
<span
  aria-label=" 0"
  aria-labelledby="aria label"
  onMouseDown={[Function]}
>
  <div
    aria-label="0"
    className="counter sizeLarge kindFill colorPrimary"
  >
    <span
      data-testid="counter"
      id="counter"
    >
      0
    </span>
  </div>
</span>
`;

exports[`Counter renders correctly with className 1`] = `
<span
  aria-label=" 0"
  aria-labelledby=""
  className="className"
  onMouseDown={[Function]}
>
  <div
    aria-label="0"
    className="counter sizeLarge kindFill colorPrimary"
  >
    <span
      data-testid="counter"
      id="counter"
    >
      0
    </span>
  </div>
</span>
`;

exports[`Counter renders correctly with count above limit 1`] = `
<span
  aria-label=" 999+"
  aria-labelledby=""
  onMouseDown={[Function]}
>
  <div
    aria-label="999+"
    className="counter sizeLarge kindFill colorPrimary"
  >
    <span
      data-testid="counter"
      id="counter"
    >
      999+
    </span>
  </div>
</span>
`;

exports[`Counter renders correctly with count above limit 2`] = `
<span
  aria-label=" 1050"
  aria-labelledby=""
  onMouseDown={[Function]}
>
  <div
    aria-label="1050"
    className="counter sizeLarge kindFill colorPrimary"
  >
    <span
      data-testid="counter"
      id="counter"
    >
      1050
    </span>
  </div>
</span>
`;

exports[`Counter renders correctly with count below the limit 1`] = `
<span
  aria-label=" 1"
  aria-labelledby=""
  onMouseDown={[Function]}
>
  <div
    aria-label="1"
    className="counter sizeLarge kindFill colorPrimary"
  >
    <span
      data-testid="counter"
      id="counter"
    >
      1
    </span>
  </div>
</span>
`;

exports[`Counter renders correctly with counterClassName 1`] = `
<span
  aria-label=" 0"
  aria-labelledby=""
  onMouseDown={[Function]}
>
  <div
    aria-label="0"
    className="counter sizeLarge kindFill colorPrimary counterClassName"
  >
    <span
      data-testid="counter"
      id="counter"
    >
      0
    </span>
  </div>
</span>
`;

exports[`Counter renders correctly with line kind 1`] = `
<span
  aria-label=" 0"
  aria-labelledby=""
  onMouseDown={[Function]}
>
  <div
    aria-label="0"
    className="counter sizeLarge kindLine colorPrimary"
  >
    <span
      data-testid="counter"
      id="counter"
    >
      0
    </span>
  </div>
</span>
`;

exports[`Counter renders correctly with negative color 1`] = `
<span
  aria-label=" 0"
  aria-labelledby=""
  onMouseDown={[Function]}
>
  <div
    aria-label="0"
    className="counter sizeLarge kindFill colorNegative"
  >
    <span
      data-testid="counter"
      id="counter"
    >
      0
    </span>
  </div>
</span>
`;

exports[`Counter renders correctly with small size 1`] = `
<span
  aria-label=" 0"
  aria-labelledby=""
  onMouseDown={[Function]}
>
  <div
    aria-label="0"
    className="counter sizeSmall kindFill colorPrimary"
  >
    <span
      data-testid="counter"
      id="counter"
    >
      0
    </span>
  </div>
</span>
`;

exports[`Counter renders correctly with the prefix 1`] = `
<span
  aria-label=" 13"
  aria-labelledby=""
  onMouseDown={[Function]}
>
  <div
    aria-label="13"
    className="counter sizeLarge kindFill colorPrimary"
  >
    <span
      data-testid="counter"
      id="counter"
    >
      +13
    </span>
  </div>
</span>
`;
